--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
     "node": ">=12.0.0",
     "npm": ">=6.0.0",
     "yarn": ">=1.21.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.2",
+    "rimraf": "^3.0.0",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   }
 }
