--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,16 +1,14 @@
 {
+  "extends": "../../tsconfig",
   "compilerOptions": {
-    "target": "es5",
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "baseUrl": ".",
     "types": [
       "webpack-env",
       "jest"
@@ -33,8 +31,5 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
