--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A Notes taking for Developers from a Developer",
   "private": true,
   "scripts": {
+    "dev:client:start": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn serve",
+    "dev:client:lint": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn lint",
+    "prod:client:build": "yarn substep:set-environment:client -- --environment=prod && cd apps/client && yarn build",
+    "test:client:unit": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:unit",
+    "test:client:e2e": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:e2e",
     "substep:set-environment:client": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-client-environment.ts"
   },
   "repository": {
