--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "add:package": "vue add $1"
   },
   "dependencies": {
     "register-service-worker": "^1.6.2",
