--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prod:client:build": "yarn substep:set-environment:client -- --environment=prod && cd apps/client && yarn build",
     "test:client:unit": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:unit",
     "test:client:e2e": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:e2e",
-    "substep:set-environment:client": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-client-environment.ts"
+    "substep:set-environment:client": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-client-environment.ts",
+    "utils:remove-node-modules": "rimraf node_modules apps/*/node_modules",
+    "utils:add:client:package": "cd apps/client && yarn add:package $1"
   },
   "repository": {
     "type": "git",
