--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
     "add:package": "vue add $1"
   },
   "dependencies": {
+    "reflect-metadata": "^0.1.13",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
@@ -38,6 +39,7 @@
     "vue-cli-plugin-vuetify": "^2.0.3",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
+    "vue-typescript-inject": "^0.3.0",
     "vuetify-loader": "^1.3.0"
   }
 }
