--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:barrel:shared": "barrel-maintainer apps/shared/src --includeRootDir --singleQuotes --ts",
     "substep:set-environment:client": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-client-environment.ts",
     "utils:remove-node-modules": "rimraf node_modules apps/*/node_modules",
-    "utils:add:client:package": "cd apps/client && yarn add:package $1",
+    "utils:add:client:vue-package": "cd apps/client && yarn add:package $1",
+    "utils:add:client:npm-package": "cd apps/client && yarn add $1 $2",
     "utils:add:client:files": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/create-client-files.ts -- --type=component",
     "utils:install-packages:client": "cd apps/client && yarn install",
     "utils:install-packages:shared": "cd apps/shared && yarn install",
