--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,7 +18,8 @@
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-class-component": "^2.2.1"
   },
   "devDependencies": {
     "@rouche/vue-auto-tmpl-loader": "^1.1.3",
