--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn dev:root:lint && yarn dev:client:lint"
+      "pre-push": "yarn dev:root:lint && yarn dev:client:lint"
     }
   }
 }
