--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,7 @@
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
     "vuex-class-component": "^2.2.1"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@rouche/vue-auto-tmpl-loader": "^1.1.3",
     "@types/jest": "^24.0.19",
+    "@types/vuelidate": "^0.7.10",
     "@vue/cli-plugin-e2e-cypress": "^4.1.0",
     "@vue/cli-plugin-pwa": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
