[ROOT] Bugfix for yarn waring `--` for passing variables

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "scripts": {
     "dev:all:start": "concurrently --names \"CLIENT,SHARED\" -c \"yellow.bold,yellow.bold\" \"yarn dev:client:start\" \"yarn dev:barrel:shared\"",
-    "dev:client:start": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn serve",
-    "dev:client:lint": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn lint",
-    "prod:client:build": "yarn substep:set-environment:client -- --environment=prod && cd apps/client && yarn build",
-    "test:client:unit": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:unit",
-    "test:client:e2e": "yarn substep:set-environment:client -- --environment=dev && cd apps/client && yarn test:e2e",
+    "dev:client:start": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn serve",
+    "dev:client:lint": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn lint",
+    "prod:client:build": "yarn substep:set-environment:client --environment=prod && cd apps/client && yarn build",
+    "test:client:unit": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn test:unit",
+    "test:client:e2e": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn test:e2e",
     "dev:barrel:shared": "barrel-maintainer apps/shared/src --includeRootDir --singleQuotes --ts",
     "dev:shared:lint": "cd apps/shared && yarn lint",
     "dev:root:lint": "tslint --project .",
