[SCHEMATICS] Add blank boilerplate

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:server:e2e": "yarn substep:set-environment:server --environment=dev && cd apps/server && yarn test:e2e",
     "prod:server:start": "yarn substep:set-environment:server --environment=prod && cd apps/server && yarn start:prod",
     "dev:barrel:shared": "barrel-maintainer apps/shared/src --includeRootDir --singleQuotes --ts",
+    "dev:schematics:start": "cd apps/schematics && yarn build:watch",
+    "dev:schematics:build": "cd apps/schematics && yarn build",
+    "dev:schematics:lint": "cd apps/schematics && yarn lint",
+    "test:schematics": "cd apps/schematics && yarn test",
     "substep:set-environment:client": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-client-environment.ts",
     "substep:set-environment:server": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/set-server-environment.ts",
     "utils:remove-node-modules": "rimraf node_modules apps/*/node_modules",
@@ -28,10 +32,11 @@
     "utils:add:server:npm-package": "cd apps/server && yarn add $1 $2",
     "utils:create:client:files": "ts-node --compiler-options='{\"module\":\"commonJs\"}' tools/create-client-files.ts",
     "utils:create:server:files": "cd apps/server && nest",
-    "utils:install-packages:all": "yarn utils:install-packages:shared && yarn utils:install-packages:client && yarn utils:install-packages:server",
+    "utils:install-packages:all": "yarn utils:install-packages:shared && yarn utils:install-packages:client && yarn utils:install-packages:server && utils:install-packages:schematics",
     "utils:install-packages:client": "cd apps/client && yarn install",
     "utils:install-packages:server": "cd apps/server && yarn install",
     "utils:install-packages:shared": "cd apps/shared && yarn install",
+    "utils:install-packages:schematics": "cd apps/schematics && yarn install",
     "preinstall": "$npm_execpath --silent run checkYarn",
     "postinstall": "yarn utils:install-packages:all",
     "checkYarn": "echo \"$npm_execpath\" | grep -q \"yarn\\.js$\" || (echo '⚠️  Use YARN not NPM! ⚠️ ' && echo && exit 1)"
