--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev:all:start": "concurrently --names \"CLIENT,SERVER,SHARED\" -c \"yellow.bold,yellow.bold,yellow.bold\" \"yarn dev:client:start\" \"yarn dev:server:start\" \"yarn dev:barrel:shared\"",
     "dev:client:start": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn serve",
     "dev:server:start": "yarn substep:set-environment:server --environment=dev && cd apps/server && yarn start:dev",
-    "dev:all:lint": "yarn dev:root:lint && yarn dev:client:lint && yarn dev:server:lint && yarn dev:shared:lint",
-    "dev:root:lint": "tslint --project .",
+    "dev:all:lint": "yarn dev:root:lint && yarn dev:client:lint && yarn dev:server:lint && yarn dev:shared:lint && yarn dev:schematics:lint",
+    "dev:root:lint": "tslint --project . -c tslint.json",
     "dev:client:lint": "yarn substep:set-environment:client --environment=dev && cd apps/client && yarn lint",
     "dev:server:lint": "yarn substep:set-environment:server --environment=dev && cd apps/server && yarn lint",
     "dev:shared:lint": "cd apps/shared && yarn lint",
