--- a/apps/schematics/package.json
+++ b/apps/schematics/package.json
@@ -6,7 +6,7 @@
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
     "test": "npm run build && jasmine src/**/*_spec.js",
-    "lint": "tslint --project ."
+    "lint": "tslint --project . -c tslint.json"
   },
   "keywords": [
     "schematics"
